--- a/Less/home.less
+++ b/Less/home.less
@@ -178,5 +178,16 @@ header{
             padding-bottom: 1.6rem;
         }
     }
+
+    @media @mobile{
+        h2{
+            font-size: 2rem;
+        }
+        .display{
+            p{
+                display: none;
+            }
+        }
+    }
 }
 
